[package]
name = "visbackend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.10"
actix-web = "4.13.0"
actix-ws = "0.4.0"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.10"
futures-util = "0.3.32"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "time"] }
