[package]
name = "visbackend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.10"
actix-web = "4.13.0"
actix-ws = "0.4.0"
clap = { version = "4.6.0", features = ["derive"] }
creak = "0.3.0"
env_logger = "0.11.10"
futures-util = "0.3.32"
log = "0.4.29"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
spectrum-analyzer = "1.7.0"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "time"] }
